--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h2>My website</h2>
+    <h2>My website</h2>
+    <h3>My website</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam velit aliquam blanditiis, veritatis porro minus doloribus alias et unde asperiores.</p>
+    <a href="#">Click here</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea unde enim quos!</p>
 </body>
 </html>
