--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Second Repo</title>
 </head>
 <body>
+    <h2>i can github</h2>
     <h2>My website</h2>
     <h2>My website</h2>
     <h3>My website</h3>
