--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam velit aliquam blanditiis, veritatis porro minus doloribus alias et unde asperiores.</p>
     <a href="#">Click here</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea unde enim quos!</p>
+    <img src="aija.jpg" alt="">
 </body>
 </html>
