--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam velit aliquam blanditiis, veritatis porro minus doloribus alias et unde asperiores.</p>
     <a href="#">Click here</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea unde enim quos!</p>
+    <div>
+        <h3>New Blog</h3>
+        <h5>look mama i write a bloggi</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere labore nostrum esse doloribus magni repellendus saepe rerum assumenda voluptates voluptatibus.</p>
+    </div>
     <img src="aija.jpg" alt="">
 </body>
 </html>
