--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea unde enim quos!</p>
     <div>
         <h3>New Blog</h3>
-        <h5>look mama i write a bloggi</h5>
+        <h5>look mama i write a bloggi amma jan i love u</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere labore nostrum esse doloribus magni repellendus saepe rerum assumenda voluptates voluptatibus.</p>
     </div>
     <img src="aija.jpg" alt="">
